# moltis

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  biome.json  flake.nix  fly.toml  justfile  render.yaml
.do/: deploy.template.yaml
.github/workflows/: ci.yml  deb-packages.yml  homebrew.yml
Formula/: moltis.rb
crates/agents/: Cargo.toml
crates/agents/src/: lazy_tools.rs  lib.rs  model.rs  prompt.rs  runner.rs  skills.rs  tool_registry.rs
crates/auth/src/: credential_store.rs
crates/browser/src/: pool.rs
crates/channels/src/: plugin.rs
crates/chat/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: auth_commands.rs  doctor_commands.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  secret_serde.rs
crates/config/src/: lib.rs  schema.rs  template.rs  validate.rs
crates/discord/src/: commands.rs  config.rs  handler.rs  plugin.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: auth.rs  auth_middleware.rs  auth_routes.rs  auth_webauthn.rs  channel_events.rs  chat.rs  lib.rs  local_llm_setup.rs  logs.rs  mcp_service.rs  methods.rs  node_exec.rs  provider_setup.rs  server.rs  services.rs  session.rs  state.rs  ws.rs
crates/gateway/src/assets/: app.js  index.html  style.css
crates/gateway/src/assets/css/: components.css
crates/gateway/src/assets/js/: app.js  helpers.js  page-chat.js  page-images.js  page-login.js  page-settings.js  page-setup.js  providers.js  router.js  sessions.js  websocket.js
crates/gateway/src/methods/: mod.rs  node.rs  services.rs
crates/gateway/tests/: auth_middleware.rs
crates/gateway/ui/: input.css
crates/graphql/tests/: integration.rs
crates/httpd/src/: auth_middleware.rs  auth_routes.rs  server.rs  ssh_routes.rs
crates/mcp/src/: client.rs  manager.rs  registry.rs  sse_transport.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/msteams/src/: config.rs  plugin.rs
crates/oauth/: Cargo.toml
crates/oauth/src/: defaults.rs  device_flow.rs  kimi.rs  lib.rs
crates/openclaw-import/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: api.rs  loader.rs
crates/projects/src/: detect.rs  lib.rs  store.rs  types.rs  worktree.rs
crates/protocol/src/: lib.rs
crates/provider-setup/src/: lib.rs
crates/providers/src/: anthropic.rs  lib.rs  openai.rs
crates/service-traits/src/: lib.rs
crates/sessions/src/: metadata.rs
crates/skills/: Cargo.toml
crates/skills/src/: discover.rs  formats.rs  install.rs  lib.rs  parse.rs  portability.rs  prompt_gen.rs  registry.rs  requirements.rs  types.rs
crates/slack/src/: config.rs  plugin.rs  socket.rs
crates/telegram/src/: config.rs  handlers.rs  outbound.rs  plugin.rs
crates/tools/: Cargo.toml
crates/tools/src/: approval.rs  exec.rs  policy.rs  sandbox.rs  web_fetch.rs  web_search.rs
crates/web/src/: lib.rs  (+1 more)
docs/src/: configuration.md  nodes.md  skills-security.md  tool-registry.md  vault.md  whatsapp.md
features/: actor-channel-isolation.md  derive-tool-schema.md  discord-channel-plugin.md  group-chat-support.md  media-transcription.md  multi-agent-routing.md  plan-mcp-and-next.md  roadmap-moltis-vs-openclaw.md  wasm-plugin-sandbox.md  webhook-triggers.md
website/: releases.json
(+34 files in other folders)
