[package]
edition.workspace = true
name              = "moltis-plugins"
version.workspace = true

[dependencies]
anyhow          = { workspace = true }
async-trait     = "0.1"
moltis-agents   = { workspace = true }
moltis-channels = { workspace = true }
moltis-common   = { workspace = true }
moltis-skills   = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
tracing         = { workspace = true }
